--- a/_config.yml
+++ b/_config.yml
@@ -37,22 +37,22 @@ mastodon_link                             :
 features                                  :
 
   - title                                 : Your Muse
-    description                           : Get to know your muse before we get started.
+    description                           : Read carefully to get to know your muse.
     link                                  : /v
-    link_text                             : Visit
-    fontawesome_icon_name                 : magic
+    link_text                             : Read
+    fontawesome_icon_name                 : eye
     
   - title                                 : Join @vtastic
     description                           : Join the program and start engaging today.
     link                                  : /join
     link_text                             : Join
-    fontawesome_icon_name                 : mobile
+    fontawesome_icon_name                 : credit-card
 
   - title                                 : Code of Conduct
-    description                           : Read rules for responsible and appropriate behavior.
+    description                           : Adhere to rules for responsible and appropriate behavior.
     link                                  : /conduct
-    link_text                             : Read
-    fontawesome_icon_name                 : play-circle
+    link_text                             : Visit
+    fontawesome_icon_name                 : book
 
 # Theme Settings
 topbar_color                              : "#000000"
