--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ enable_smart_app_banner                   : true                                
 your_name                                 : ~V                                
 your_link                                 : https://vtastic.us.to                     
 your_city                                 :                                 
-email_address                             : private
+email_address                             : 
 facebook_username                         :                                           
-instagram_username                        : private
+instagram_username                        : 
 twitter_username                          : 
 github_username                           : 
 youtube_username                          :
