--- a/_config.yml
+++ b/_config.yml
@@ -35,19 +35,18 @@ mastodon_link                             :
 
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
-
-  - title                                 : Your Muse
-    description                           : Read carefully and get to know your muse ~V.
-    link                                  : /v
-    link_text                             : Read
-    fontawesome_icon_name                 : eye
-    
   - title                                 : Join @vtastic
-    description                           : Join the program and engage today.
+    description                           : Join the program and get access today.
     link                                  : /join
     link_text                             : Join
     fontawesome_icon_name                 : credit-card
 
+  - title                                 : Your Muse
+    description                           : Read carefully and know your muse ~V.
+    link                                  : /v
+    link_text                             : Read
+    fontawesome_icon_name                 : eye
+    
   - title                                 : Code of Conduct
     description                           : Adhere to rules for responsible and appropriate behavior.
     link                                  : /conduct
