--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ enable_smart_app_banner                   : true                                
 
 # Information About Yourself
 your_name                                 : ~V                                
-your_link                                 : https://vtastic.us.to                     
+your_link                                 : https://vtastic.net                  
 your_city                                 :                                 
 email_address                             : 
 facebook_username                         :                                           
